# sparse-dropout

./: .gitignore  .gitmodules  NOTES.md  PROJECT_PLAN.md  README.md  dev.py  pyproject.toml  requirements.txt  setup.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: benchmarker.py  common.py  conv.py  detailed.py  dsd.py  full.py  matmul.py  mlp.py  model.py  sdd.py  test.py  trace.py  trace_mlp.py  utils.py
docs/: NOTES.md  PROJECT_PLAN.md
eval/: dataset.py  train.py  utils.py
eval/llm/: config.py  dataset.py  model.py  plot.py  train.py
eval/mlp/: config.py  dataset.py  model.py  plot.py  train.py
eval/vit/: config.py  model.py  plot.py  train.py
experiemnts/: launch_experiments.sh  llm_shakespeare.sh  mlp_fashion_mnist.sh  mlp_mnist.sh  vit_cifar10.sh  vit_fashion_mnist.sh
flash_dropout/cuda/: CMakeLists.txt  binding.py  binding_gemm.py
flash_dropout/cuda/src/: benchmark.cu  debug.cu  fdropout.cu  gemm.cuh  gemm_binding.cu  im2col.cuh  kernel_traits.cuh  make_mask.cuh  (+5 more)
flash_dropout/functional/: __init__.py  blockwise_dropout_matmul_cuda.py  blockwise_dropout_matmul_torch.py  blockwise_dropout_matmul_triton.py  im2col_conv2d.py  naive.py  structured_blockwise_dropout_matmul_triton.py  utils.py  vanilla.py
flash_dropout/layers/: __init__.py  blockwise_dropout.py  dropout_conv.py  dropout_mm.py
flash_dropout/triton/: dsd_matmul.py  sdd_matmul.py  utils.py
miscellaneous/: perm.py  plot_style.py
structured_dropout/: types.py
structured_dropout/functional/: __init__.py  blockwise_dropout_matmul_triton.py  blockwise_dropout_mm.py  naive.py  naive_blockwise.py  structured_blockwise_dropout_matmul_triton.py  triton.py  utils.py
structured_dropout/layers/: __init__.py  blockwise_dropout.py
test/: debug.py  naive.py  pytorch_sample.py  test_blockwise_dropout_matmul.py  test_cuda.py  test_triton.py  torch_sparse.py
(+2 files in other folders)
