[tool.poetry]
name = "flash-dropout"
version = "0.1.0"
description = ""
authors = ["Andy Lo <andylolu24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
triton = "^2.1.0"
numpy = "^1.26.2"
lightning = "^2.1.2"
torchvision = "^0.16.1"
ml-collections = "^0.1.1"
matplotlib = "^3.8.2"
pandas = "^2.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
