[tool.poetry]
name = "flash-dropout"
version = "0.1.0"
description = ""
authors = ["Andy Lo <andylolu24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.1"
triton = "^2.1.0"
numpy = "^1.26.2"
lightning = "^2.1.2"
ml-collections = "^0.1.1"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
ninja = "^1.11.1.1"
torchvision = "^0.16.1"
datasets = "^2.16.0"
transformers = "^4.36.2"
wandb = "^0.16.1"
seaborn = "^0.13.0"
scienceplots = "^2.1.1"
einops = "^0.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
